# data_eating_storage_mysql

./: README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
data_eating_storage_mysql/: MysqlResourceRepository.py  __init__.py  storage.py
